# rkaiq_tool_server

./: .clang-tidy  .gitignore  Android.bp  Android.mk  CMakeLists.txt  make-Makefiles-aarch64.bash  make-Makefiles.bash  rkaiq_tool_server.cpp
camera/: camera_capture.cpp  camera_capture.h  camera_device.cpp  camera_device.h  camera_infohw.cpp  camera_infohw.h  camera_memory.cpp  camera_memory.h
common/: cmdline.h
logger/: log.cpp  log.h
mediactl/: libmediactl.c  libv4l2subdev.c  media-bus-format-codes.h  media-bus-format-names.h  media_info.c  media_info.h  mediactl-priv.h  mediactl.c  mediactl.h  options.c  options.h  tools.h  v4l2subdev.h
mediactl/linux/: compiler.h  media-bus-format.h  media.h  v4l2-common.h  v4l2-controls.h  v4l2-mediabus.h  v4l2-subdev.h  videodev2.h
netserver/: domain_tcp_client.cpp  domain_tcp_client.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
rkaiq/: dump_raw.sh  dump_yuv.sh  multiframe_process.cpp  multiframe_process.h  rkaiq_common.h  rkaiq_online_protocol.cpp  rkaiq_online_protocol.h  rkaiq_protocol.cpp  rkaiq_protocol.h  rkaiq_raw_protocol.cpp  rkaiq_raw_protocol.h
rkaiq/rkaiq_api/: rkaiq_adpcc.cpp  rkaiq_adpcc.h  rkaiq_ae.cpp  rkaiq_ae.h  rkaiq_agamma.cpp  rkaiq_agamma.h  rkaiq_ahdr.cpp  rkaiq_ahdr.h  rkaiq_anr.cpp  rkaiq_anr.h  rkaiq_awb.cpp  rkaiq_awb.h  rkaiq_ccm.cpp  rkaiq_ccm.h  rkaiq_cmdid.h  rkaiq_cproc.cpp  rkaiq_cproc.h  rkaiq_dehaze.cpp  rkaiq_dehaze.h  rkaiq_engine.cpp  rkaiq_engine.h  rkaiq_imgproc.cpp  rkaiq_imgproc.h  rkaiq_manager.cpp  rkaiq_manager.h  rkaiq_media.cpp  rkaiq_media.h  rkaiq_sharp.cpp  rkaiq_sharp.h  rkaiq_socket.cpp  rkaiq_sysctl.cpp  rkaiq_sysctl.h
rkmedia/: link_flow.cc  rtsp_server.cpp  rtsp_server.h  sink_flow.cc  source_flow.cc
rkmedia/include/groupsock/: NetCommon.h
rkmedia/librkmedia/: CMakeLists.txt  buffer.cc  codec.cc  encoder.cc  flow.cc  image.cc  media_config.cc  media_type.cc  message.cc  sound.cc  stream.cc  utils.cc
rkmedia/librkmedia/flow/: output_stream_flow.cc  source_stream_flow.cc  video_encoder_flow.cc
rkmedia/librkmedia/include/easymedia/: buffer.h  codec.h  control.h  decoder.h  demuxer.h  encoder.h  filter.h  flow.h  image.h  key_string.h  link_config.h  lock.h  media_config.h  media_reflector.h  media_type.h  message.h  message_type.h  muxer.h  reflector.h  rga_filter.h  rknn_user.h  rknn_utils.h  sound.h  stream.h  utils.h
rkmedia/librkmedia/live555/server/: aac_server_media_subsession.cc  h264_server_media_subsession.cc  h265_server_media_subsession.cc  live555_media_input.cc  live555_server.cc  mjpeg_server_media_subsession.cc  mp2_server_media_subsession.cc  rtsp_server.cc  simple_server_media_subsession.cc
rkmedia/librkmedia/rkmpp/: mpp_decoder.cc  mpp_decoder.h  mpp_encoder.cc  mpp_encoder.h  mpp_final_encoder.cc  mpp_inc.cc  mpp_inc.h
rkmedia/librkmedia/stream/camera/: v4l2_capture_stream.cc  v4l2_stream.cc  v4l2_stream.h  v4l2_utils.cc  v4l2_utils.h
rtspserver/: H264LiveVideoSource.cpp  H264LiveVideoSource.h  RtspServer.cpp
test/: CMakeLists.txt
test/frame_average/: frame_average.cpp
test/rkmedia/: rtsp_flow_test.cpp  source_sink_test.cpp
test/tcp/: client.cpp  server.cpp
test/virsual_rkaiq_tool/: virsual_rkaiq_tool.cpp
